css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {
    
    html {
        font-size: 110%;
    }
    
}

@media only screen and (min-width: 90em) {

    html {
        font-size: 120%;
    }
    
}

@media only screen and (min-width: 120em) {
    
    html {
        font-size: 130%
    }
    
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
}

.head-top {
	overflow: hidden;
	position: relative;
    background-color: #000;
    padding: 0.5em;
}

.logo {
	float: left;
	margin: 1em 30px;
    padding: 0;
	width: 120px;
    height: 50px;
    position: block;
}

.nav {
	background-color: #000;
    display: block;
}

.nav > ul {
	margin: 0;
	padding: 0.8em 0;
    display: inline-block;
	list-style-type: none;
	font-size: 1em;
}

.nav > ul li {
	margin: 0;
	padding: 0.8em 0;
    display: inline-block;
	list-style-type: none;
	font-size: 1em;
}

.nav a,
.nav a:link,
.nav a:visited {
	display: inline-block;
	padding: 0.5em 10px;
	color: #e2e2e2;
	text-decoration: none;
}

.nav a:hover,
.nav a:focus,
.nav a:active {
	background-color: #222;
	color: #fff;
}

.greendrops {
    max-width: 100%;
    display: block;
    position: relative;
}

.box1 {
    background-color: yellow;
}

.box2 {
    background-color: green;
}

.box3 {
    background-color: blue;
}

.box4 {
    background-color: red;
}

.foot {
    background-color: #000;
}

.billboard {
    position: relative;
}

.billboardtext {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    color: #fff;
    width: 80%;
}

.headers3 {
    text-align: center;
}

.feature {
    text-align: center;
}
 
blockquote {
    display: inline;
    font-weight: bold;
    display: block;
    font-size: 20px;
    width: 350px;
    text-align: center;
    margin: 0 auto;
}

blockquote:before, blockquote:after {
color: #33cc33;
font-size: 400%;
width: 50px;
}

blockquote:before {
    content: open-quote;
}

blockquote:after {
    content: close-quote;
}

.quotation {
    background-color: grey;
}

blockquote span {
    font-size: 100%;
    margin-left: 10px;
    font-weight: 500;
}

.getstarted a {
    display: block;
    text-align: center;
    border-radius: 5px;
    color: white;
    font-weight: bold;
    background-color: #000;
    padding: 1em;
    text-decoration: none;
    width: 10em;
    height: 4em;
    font-weight: 200;
    border-color: white;
    margin: 0 auto;
    border: 1px;
    border-style: solid;
    border-width: 2px;
    border-color: #33cc33;
}

a:focus {
    outline: 3px solid #fff;
}

.skip-links {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.skip-links a {
    position: absolute;
    top: -3em;
    background-color: #000;
    color: #fff;
    padding: 0.5em 0.75em;
    font-weight: bold;
    text-decoration: none;
}

.skip-links a:focus {
    top: 0;
}

.copyright {
    color: #fff;
    width: 12em;
}

.toplink {
    margin: 0;
    padding: 0.2em 0.5em;
    text-decoration: none;
    color: #fff;
    border-style: solid;
    border-width: 2px;
    border-color: #33cc33;
}

@media only screen and (min-width:60em) {
 
    .getstarted {
        text-align: right;
    }
    
}


@media only screen and (min-width: 25em) {
    
    .billboardtext {
        text-align: center;
    }

    .nav > ul {
        float: left;  
    }
    
}
    

